objects/Coaching_Session__c.object
<CustomObject>
    <fields>
        <fullName>Error_Classification__c</fullName>
        <label>Error Classification</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Amount to be Written Off-Forms-BC</fullName>
                </value>
                <value>
                    <fullName>Commission Impact-Forms-BC</fullName>
                </value>
                <value>
                    <fullName>Contract #-Forms-BC</fullName>
                </value>
                <value>
                    <fullName>Contract End Date-Forms-NC</fullName>
                </value>
                <value>
                    <fullName>Contract Received Date-Forms-NC</fullName>
                </value>
                <value>
                    <fullName>Contract Signed Date-Forms-NC</fullName>
                </value>
                <value>
                    <fullName>Contract Start Date-Forms-NC</fullName>
                </value>
                <value>
                    <fullName>Contract Type-Forms-NC</fullName>
                </value>
                <value>
                    <fullName>Contract Value-Forms-NC</fullName>
                </value>
                <value>
                    <fullName>Currency-Forms-BC</fullName>
                </value>
                <value>
                    <fullName>Current Sales Rep-Forms-NC</fullName>
                </value>
                <value>
                    <fullName>Approval matrix not followed-CC</fullName>
                </value>
                <value>
                    <fullName>Sales looped in for Finance Internal Process-CC</fullName>
                </value>
                <value>
                    <fullName>Client looped in for Cvent Internal Process-CC</fullName>
                </value>
                <value>
                    <fullName>CVII ID-Forms-BC</fullName>
                </value>
                <value>
                    <fullName>Invoice Amount- Incorrect in Form-Forms-BC</fullName>
                </value>
                <value>
                    <fullName>Invoice amount to be backed out-Form-BC</fullName>
                </value>
                <value>
                    <fullName>Invoice Date-Incorrect in Form-Forms-BC</fullName>
                </value>
                <value>
                    <fullName>Invoice# - Incorrect in Form-Forms-BC</fullName>
                </value>
                <value>
                    <fullName>Sub category of Type of Cancellation-BC</fullName>
                </value>
                <value>
                    <fullName>Notes Section in form Incorrect-Forms-EC</fullName>
                </value>
                <value>
                    <fullName>Office Location-Forms-EC</fullName>
                </value>
                <value>
                    <fullName>Original Sales Rep-Forms-NC</fullName>
                </value>
                <value>
                    <fullName>Product-Forms-BC</fullName>
                </value>
                <value>
                    <fullName>Relevant Documents not uploaded-Forms-NC</fullName>
                </value>
                <value>
                    <fullName>Sale Impact-Forms-BC</fullName>
                </value>
                <value>
                    <fullName>Sale Type-Forms-BC</fullName>
                </value>
                <value>
                    <fullName>Total Contract Billed-Forms-NC</fullName>
                </value>
                <value>
                    <fullName>Total Contract Unbilled-Forms-NC</fullName>
                </value>
                <value>
                    <fullName>Total Paid-Forms-NC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Evaluation_Date__c</fullName>
        <description>Review Date</description>
        <inlineHelpText>Review Date</inlineHelpText>
        <label>Evaluation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FCS_Case_Completion__c</fullName>
        <label>FCS Case Completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FCS_Case_Received__c</fullName>
        <label>FCS Case Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Final_Coaching_Score__c</fullName>
        <description>Total overall score percent</description>
        <formula>if ( Applied_Max_Score__c =0,0,(Sum_of_Score__c / Applied_Max_Score__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Percentage of Total Score over Applied Max Score.</inlineHelpText>
        <label>Final Coaching Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Final_Score__c</fullName>
        <formula>IF 
( Missed_Critical_Questions__c &gt;0,
0, 
IF(OR(ISPICKVAL(Session_Type__c,"Client Success Coaching"),
ISPICKVAL(Session_Type__c,"Live Milestone Call"),
ISPICKVAL(Session_Type__c,"QM Release - Release Overview Call"),
ISPICKVAL(Session_Type__c,"Internal Training Quality"),
ISPICKVAL(Session_Type__c,"External Training Quality"),
ISPICKVAL(Session_Type__c,"Project Management"),
ISPICKVAL(Session_Type__c,"MSS Spot Check"),
ISPICKVAL(Session_Type__c,"Training Quality Coaching"),
ISPICKVAL(Session_Type__c,"Live Milestone Call")),/*,
ISPICKVAL(Session_Type__c,"FCS Quality"),
ISPICKVAL(Session_Type__c,"FC - Email"),

ISPICKVAL(Session_Type__c,"FC - Inbound Call"),
ISPICKVAL(Session_Type__c,"FC - Voicemail"),
ISPICKVAL(Session_Type__c,"FC - Outbound Call")),*/


Sum_of_Score__c,Final_Coaching_Score__c*100))</formula>
        <label>Final Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Final_Score_with_Critical_Error__c</fullName>
        <description>Final overall evaluation score.</description>
        <formula>IF( Missed_Critical_Questions__c  &gt; 0,0.00, Final_Coaching_Score__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This is same as Total Score Percent for most part until any one or more Critical Questions are marked as Yes. If any Critical Question is marked Yes, Final Coaching Score becomes 0%.</inlineHelpText>
        <label>Final Score with Critical Error</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Floor_Support__c</fullName>
        <description>To be marked if floor support was needed</description>
        <inlineHelpText>To be marked if floor support was needed</inlineHelpText>
        <label>Floor Support</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>How_to_Avoid__c</fullName>
        <description>How to avoid CE</description>
        <inlineHelpText>How to avoid CE</inlineHelpText>
        <label>How to Avoid</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>How_to_meet_exceed_expectations__c</fullName>
        <description>How to meet/exceed expectations</description>
        <inlineHelpText>How to meet/exceed expectations</inlineHelpText>
        <label>How to meet/exceed expectations</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ID_Meeting_Name__c</fullName>
        <description>Name / Number of meeting reviewed</description>
        <inlineHelpText>Name / Number of meeting reviewed</inlineHelpText>
        <label>ID# / Meeting Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation_SA_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field - record being reviewed</description>
        <inlineHelpText>Lookup field - record being reviewed</inlineHelpText>
        <label>Implementation &amp; SA Team</label>
        <referenceTo>SMM_Implementations__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_this_a_CTC_coaching__c</fullName>
        <description>to identify if this is a CTC</description>
        <inlineHelpText>to identify if this is a CTC</inlineHelpText>
        <label>Is this a CTC coaching?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Is_this_a_P2P_coaching__c</fullName>
        <description>To mark a coaching as peer to peer review, so that it can be excluded from reports</description>
        <inlineHelpText>To mark a coaching as peer to peer review, so that it can be excluded from reports</inlineHelpText>
        <label>Is this a P2P coaching?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LOB_Course__c</fullName>
        <description>LOB being trained/Course name</description>
        <inlineHelpText>LOB being trained/Course name</inlineHelpText>
        <label>LOB/Course</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Training_Audience__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CSN</fullName>
                </value>
                <value>
                    <fullName>CSN Planner</fullName>
                </value>
                <value>
                    <fullName>CSN Supplier</fullName>
                </value>
                <value>
                    <fullName>Event Build</fullName>
                </value>
                <value>
                    <fullName>Events</fullName>
                </value>
                <value>
                    <fullName>Group</fullName>
                </value>
                <value>
                    <fullName>Inquisium</fullName>
                </value>
                <value>
                    <fullName>Lanyon Build</fullName>
                </value>
                <value>
                    <fullName>Lanyon Meetings</fullName>
                </value>
                <value>
                    <fullName>LOB Name</fullName>
                </value>
                <value>
                    <fullName>Passkey</fullName>
                </value>
                <value>
                    <fullName>RegOnline</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lanyon_Case_link__c</fullName>
        <description>Lookup field - record being reviewed</description>
        <inlineHelpText>Lookup field - record being reviewed</inlineHelpText>
        <label>Lanyon Case link</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_opp_identified_Comments__c</fullName>
        <description>Lead Gen opp. identified - Comments</description>
        <inlineHelpText>Lead Gen opp. identified - Comments</inlineHelpText>
        <label>Lead Gen opp. identified - Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_Gen_opportunities_identified__c</fullName>
        <description>was there a Lead Gen opportunity on the case</description>
        <inlineHelpText>was there a Lead Gen opportunity on the case</inlineHelpText>
        <label>Lead Gen opportunities identified</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Session_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lock_Session__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The field is used to lock the session when session is in Status 'Feedback Closed'. Only the users under PS 'Coaching Form Administrators' are allowed to make changes in the session.</description>
        <inlineHelpText>If checked, it means you do not have access to modify coaching form now. Please contact your QA Evaluator if changes need to be done.</inlineHelpText>
        <label>Lock Session</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manager_of_coach_being_Evaluated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Manager of Coach being evaluated in CTC</description>
        <inlineHelpText>Manager of Coach being evaluated in CTC</inlineHelpText>
        <label>Manager of coach being Evaluated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Sessions3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Manager_s_Email__c</fullName>
        <description>User Evaluated Manager's email</description>
        <inlineHelpText>User Evaluated Manager's email</inlineHelpText>
        <label>Manager's Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Missed_Business_Critical_Questions__c</fullName>
        <inlineHelpText>Total number of incorrect Business Critical Questions.</inlineHelpText>
        <label>Missed Business Critical Questions</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Coaching_Question_Category__c</field>
            <operation>equals</operation>
            <value>Business Critical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Response__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Missed_Compliance_Critical_Questions__c</fullName>
        <inlineHelpText>The total number of incorrect Compliance Critical questions.</inlineHelpText>
        <label>Missed Compliance Critical Questions</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Coaching_Question_Category__c</field>
            <operation>equals</operation>
            <value>Compliance Critical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Response__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Missed_Critical_Questions__c</fullName>
        <description>How many applied critical questions.</description>
        <inlineHelpText>The number of Critical Questions which have been answered as YES. Yes is a MISS.</inlineHelpText>
        <label>Missed Critical Questions</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Response_Scale__c</field>
            <operation>equals</operation>
            <value>Boolean</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Response__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Missed_End_User_Critical__c</fullName>
        <inlineHelpText>The number of incorrect End User Critical questions.</inlineHelpText>
        <label>Missed End User Critical</label>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Coaching_Question_Category__c</field>
            <operation>equals</operation>
            <value>End User Critical</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Coaching_Session_Question__c.Response__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </summaryFilterItems>
        <summaryForeignKey>Coaching_Session_Question__c.Coaching_Session__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Mobile_App__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field - record being reviewed</description>
        <inlineHelpText>Lookup field - record being reviewed</inlineHelpText>
        <label>Mobile App</label>
        <referenceTo>Mobile_Card__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Monitor_Type__c</fullName>
        <description>How was the coaching done</description>
        <inlineHelpText>How was the coaching done</inlineHelpText>
        <label>Monitor Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Session_Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Listening to call</fullName>
                </value>
                <value>
                    <fullName>Live(Remote)</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
                <value>
                    <fullName>Recorded</fullName>
                </value>
                <value>
                    <fullName>Side by Side</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Onboarding__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field - record being reviewed</description>
        <inlineHelpText>Lookup field - record being reviewed</inlineHelpText>
        <label>Onboarding</label>
        <referenceTo>Onboarding__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Onsite_Solutions_Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field - record being reviewed</description>
        <inlineHelpText>Lookup field - record being reviewed</inlineHelpText>
        <label>Onsite Solutions Project</label>
        <referenceTo>Alliance_OA_Projects__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Overall_Score__c</fullName>
        <description>this was for CSC form, manual scoring field, this is not needed</description>
        <inlineHelpText>this was for CSC form, manual scoring field, this is not needed</inlineHelpText>
        <label>Overall Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Remarkable (5)</fullName>
                </value>
                <value>
                    <fullName>Exceed Expectations (4)</fullName>
                </value>
                <value>
                    <fullName>Met Expectations (3)</fullName>
                </value>
                <value>
                    <fullName>Improvement needed (2)</fullName>
                </value>
                <value>
                    <fullName>Did Not meet Expectations (1)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PC_CSC_Being_Evaluated__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>User being reviewed</description>
        <inlineHelpText>User being reviewed</inlineHelpText>
        <label>PC/CSC Being Evaluated</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Coaching_Sessions4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PC_CSC_Team__c</fullName>
        <description>Team of User being reviewed</description>
        <inlineHelpText>Team of User being reviewed</inlineHelpText>
        <label>Team</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Abstract</fullName>
                </value>
                <value>
                    <fullName>Alliance Tech</fullName>
                </value>
                <value>
                    <fullName>Appointments</fullName>
                </value>
                <value>
                    <fullName>Attendee Support</fullName>
                </value>
                <value>
                    <fullName>Business Transient</fullName>
                </value>
                <value>
                    <fullName>Cancellations</fullName>
                </value>
                <value>
                    <fullName>Conference</fullName>
                </value>
                <value>
                    <fullName>Corporate Success</fullName>
                </value>
                <value>
                    <fullName>Creative</fullName>
                </value>
                <value>
                    <fullName>Creative Social Tables (PSG)</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass - App Build</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass MSS</fullName>
                </value>
                <value>
                    <fullName>CrowdCompass - Support Queue</fullName>
                </value>
                <value>
                    <fullName>CSN - Phone</fullName>
                </value>
                <value>
                    <fullName>CSN - Planner</fullName>
                </value>
                <value>
                    <fullName>CSN - Supplier</fullName>
                </value>
                <value>
                    <fullName>Cvent Attendee Support</fullName>
                </value>
                <value>
                    <fullName>Dedicated MTA</fullName>
                </value>
                <value>
                    <fullName>Dedicated Sourcing</fullName>
                </value>
                <value>
                    <fullName>DoubleDutch</fullName>
                </value>
                <value>
                    <fullName>DoubleDutch Support</fullName>
                </value>
                <value>
                    <fullName>eCommerce</fullName>
                </value>
                <value>
                    <fullName>eMarketing</fullName>
                </value>
                <value>
                    <fullName>EMI/Speed RFP</fullName>
                </value>
                <value>
                    <fullName>Enterprise event onsite team</fullName>
                </value>
                <value>
                    <fullName>Enterprise Events Client Services</fullName>
                </value>
                <value>
                    <fullName>Escalation Desk</fullName>
                </value>
                <value>
                    <fullName>Event</fullName>
                </value>
                <value>
                    <fullName>Event Builder</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Parent_Coaching_Form__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup field - record being reviewed</description>
        <inlineHelpText>Lookup field - record being reviewed</inlineHelpText>
        <label>Parent Coaching Form</label>
        <referenceTo>Coaching_Session__c</referenceTo>
        <relationshipLabel>Coaching Sessions</relationshipLabel>
        <relationshipName>Coaching_Sessions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Participants__c</fullName>
        <description>Mandatory/Voluntary</description>
        <inlineHelpText>Mandatory/Voluntary</inlineHelpText>
        <label>Participants</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Mandatory</fullName>
                </value>
                <value>
                    <fullName>Voluntary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Platform_Service_Discussed__c</fullName>
        <description>Was platform service discussed</description>
        <inlineHelpText>Was platform service discussed</inlineHelpText>
        <label>Platform Service Discussed?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Process_Issue__c</fullName>
        <description>type of process issue</description>
        <inlineHelpText>type of process issue</inlineHelpText>
        <label>Process Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Introduction Email</fullName>
                </value>
                <value>
                    <fullName>Case/Activity Logging</fullName>
                </value>
                <value>
                    <fullName>Timely Email acknowledgement</fullName>
                </value>
                <value>
                    <fullName>Client Followups</fullName>
                </value>
                <value>
                    <fullName>Project Sign Off</fullName>
                </value>
                <value>
                    <fullName>Statement of Work</fullName>
                </value>
                <value>
                    <fullName>Email template adoption</fullName>
                </value>
                <value>
                    <fullName>Ortoo Use</fullName>
                </value>
                <value>
                    <fullName>Project Plan</fullName>
                </value>
                <value>
                    <fullName>Merchant Account Test</fullName>
                </value>
                <value>
                    <fullName>Sending Milestone for QC</fullName>
                </value>
                <value>
                    <fullName>Raising Red Flag</fullName>
                </value>
                <value>
                    <fullName>EB Process Summary</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Issue__c</fullName>
        <description>Type of product issue</description>
        <inlineHelpText>Type of product issue</inlineHelpText>
        <label>Product Issue</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>General</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Agenda Items</fullName>
                </value>
                <value>
                    <fullName>Pricing</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
                <value>
                    <fullName>Website</fullName>
                </value>
                <value>
                    <fullName>Registration</fullName>
                </value>
                <value>
                    <fullName>Surveys</fullName>
                </value>
                <value>
                    <fullName>Onsite</fullName>
                </value>
                <value>
                    <fullName>Web</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Alerts</fullName>
                </value>
                <value>
                    <fullName>Manage Invitees &amp; Registrants</fullName>
                </value>
                <value>
                    <fullName>Quick Action</fullName>
                </value>
                <value>
                    <fullName>Import</fullName>
                </value>
                <value>
                    <fullName>Assign</fullName>
                </value>
                <value>
                    <fullName>Reports</fullName>
                </value>
                <value>
                    <fullName>Membership And Dues</fullName>
                </value>
                <value>
                    <fullName>Admin Account Settings</fullName>
                </value>
                <value>
                    <fullName>Admin Email Settings</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>